<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_rounded_20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/negative_button"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positive_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/event_id_input"
        app:layout_constraintTop_toBottomOf="@+id/event_id_input"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/positive_button"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="@+id/negative_button"
        app:layout_constraintEnd_toEndOf="@+id/event_id_input"
        app:layout_constraintStart_toEndOf="@+id/negative_button"
        app:layout_constraintTop_toTopOf="@+id/negative_button" />

    <TextView
        android:id="@+id/event_id_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/new_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_divider" />

    <TextView
        android:id="@+id/change_id_dialog_title"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/change_event_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dialog_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:background="@color/gray_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_id_dialog_title" />

    <EditText
        android:id="@+id/event_id_input"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/enter_new_event_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_id_input_label" />

    <TextView
        style="@style/ErrorText"
        android:id="@+id/age_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_valid_age"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/event_id_input"
        app:layout_constraintEnd_toEndOf="@+id/event_id_input" />

    <TextView
        style="@style/ErrorText"
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/id_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/event_id_input"
        app:layout_constraintEnd_toEndOf="@+id/event_id_input" />

</androidx.constraintlayout.widget.ConstraintLayout>